--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Bot_AI.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bot_AI.data",
+        dataUrl: "https://media.githubusercontent.com/media/Narendraom/villa_bot_ai/main/Build/Bot_AI.data",
         frameworkUrl: buildUrl + "/Bot_AI.framework.js",
         codeUrl: buildUrl + "/Bot_AI.wasm",
         streamingAssetsUrl: "StreamingAssets",
