--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Bot_AI</title>
+    <title>Unity WebGL Player | AIBot</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Bot_AI</div>
+        <div id="unity-build-title">AIBot</div>
       </div>
     </div>
     <script>
@@ -57,14 +57,14 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Bot_AI.loader.js";
+      var loaderUrl = buildUrl + "/AIBot.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Bot_AI.data",
-        frameworkUrl: buildUrl + "/Bot_AI.framework.js",
-        codeUrl: buildUrl + "/Bot_AI.wasm",
+        dataUrl: buildUrl + "/AIBot.data",
+        frameworkUrl: buildUrl + "/AIBot.framework.js",
+        codeUrl: buildUrl + "/AIBot.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Bot_AI",
+        companyName: "Mayaaverse Creations",
+        productName: "AIBot",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
