--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | AIBot</title>
+    <title>Unity WebGL Player | AI Bot</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">AIBot</div>
+        <div id="unity-build-title">AI Bot</div>
       </div>
     </div>
     <script>
@@ -59,12 +59,12 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/AIBot.loader.js";
       var config = {
-        dataUrl: "https://media.githubusercontent.com/media/Narendraom/villa_bot_ai/main/Build/Bot_AI.data",
+        dataUrl: buildUrl + "/AIBot.data",
         frameworkUrl: buildUrl + "/AIBot.framework.js",
         codeUrl: buildUrl + "/AIBot.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Mayaaverse Creations",
-        productName: "AIBot",
+        productName: "AI Bot",
         productVersion: "0.1.0",
         showBanner: unityShowBanner,
       };
